--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -4,7 +4,7 @@
 
 
     <div class="home__tagline-wrapper">
-      <p class="home__tagline" data-aos="fade-right" data-aos-delay="200" data-aos-duration="1000">
+      <p class="home__tagline" data-aos="fade-in" data-aos-duration="1000">
         <span class="hidden-md-up">
           We are a <strong>brand strategy and design</strong> studio 
           <span class="home__tagline-break">that helps innovative <strong>life science startups</strong></span>
