--- a/src/assets/sass/settings/_fonts.scss
+++ b/src/assets/sass/settings/_fonts.scss
@@ -1,14 +1,14 @@
 $body-font: 'Open Sans', -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
-$title-font: 'KG-SummerStorm', Arial, sans-serif;
+$title-font: aktiv-grotesk, Arial, sans-serif;
 $base-font: 16;
 $base-font-desk: 18;
 $small-font: 14;
 $line-height-base: 1.5;
 $font-lead: 18;
 $font-lead-desk: 22;
-$heading-1: 42;
-$heading-2: 33;
+$heading-1: 62;
+$heading-2: 43;
 $heading-3: 18;
 $heading-4: 14;
-$heading-1-mobile: 34;
-$heading-2-mobile: 24;
+$heading-1-mobile: 44;
+$heading-2-mobile: 34;
