--- a/src/assets/sass/settings/_fonts.scss
+++ b/src/assets/sass/settings/_fonts.scss
@@ -1,5 +1,5 @@
 $body-font: 'Open Sans', -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
-$title-font: aktiv-grotesk, Arial, sans-serif;
+$title-font: aktiv-grotesk, 'Open Sans', Arial, sans-serif;
 $base-font: 16;
 $base-font-desk: 18;
 $small-font: 14;
