--- a/src/app/global/header/header.component.scss
+++ b/src/app/global/header/header.component.scss
@@ -8,7 +8,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: $space-small 15px;
+  padding: $space-small $space-medium;
 
   &:before {
     background-color: rgba($color-black, .9);
