--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -7,12 +7,12 @@
       <p class="home__tagline" data-aos="fade-in" data-aos-duration="1000">
         <span class="hidden-md-up">
           We are a <strong>brand strategy and design</strong> studio 
-          <span class="home__tagline-break">that helps innovative <strong>life science startups</strong></span>
+          <span class="home__tagline-break">that helps innovative <strong>tech startups</strong></span>
           <span class="home__tagline-break">grow and <strong>stand out in the market</strong>.</span>
         </span>
         <span appParallax [ratio]=".15" [direction]="'horizontal'" style="display: inline-block;" class="hidden-md">
           We are a <strong>brand strategy and design</strong> studio 
-          <span class="home__tagline-break">that helps innovative <strong>life science startups</strong></span>
+          <span class="home__tagline-break">that helps innovative <strong>tech startups</strong></span>
           <span class="home__tagline-break">grow and <strong>stand out in the market</strong>.</span>
         </span>
       </p>
