--- a/src/app/global/hero/hero.component.scss
+++ b/src/app/global/hero/hero.component.scss
@@ -25,6 +25,7 @@
 
     h1 {
       @include font-size($heading-1-mobile);
+      line-height: 60px;
 
       @include md {
         @include font-size($heading-1);
