--- a/src/assets/sass/settings/_fonts.scss
+++ b/src/assets/sass/settings/_fonts.scss
@@ -1,12 +1,12 @@
 $body-font: 'Open Sans', -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
-$title-font: 'KG-SummerStorm', 'Open Sans', Arial, sans-serif;
+$title-font: 'Open Sans', Arial, sans-serif;
 $base-font: 16;
 $base-font-desk: 18;
 $small-font: 14;
 $line-height-base: 1.5;
 $font-lead: 18;
 $font-lead-desk: 22;
-$heading-1: 42;
+$heading-1: 52;
 $heading-2: 33;
 $heading-3: 18;
 $heading-4: 14;
