removed emojis from nav

--- a/src/app/global/header/header.component.scss
+++ b/src/app/global/header/header.component.scss
@@ -122,7 +122,7 @@
 
       @include md {
         margin-right: 0;
-        margin-left: $space-large;
+        margin-left: 30px;
       }
     }
   }
