--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -29,5 +29,7 @@
 
   <app-footer-component #footer></app-footer-component>
 
+  <app-signup-popup (clickHander)="scrollTo($event)"></app-signup-popup>
+
   <app-cookie-banner [hide]="hideCookie"></app-cookie-banner>
 </div>
