--- a/src/app/global/signup-popup/signup-popup.component.html
+++ b/src/app/global/signup-popup/signup-popup.component.html
@@ -1,5 +1,5 @@
 <div class="popup" [ngClass]="{'popup--show': showPrompt}">
-  <button (click)="closePrompt($event)" class="popup__button">X</button>
+  <button (click)="closePrompt()" class="popup__button">X</button>
   <h2>Free 11 tips to build an awesome tech brand PDF!</h2>
   <a href="#" (click)="toggleDialog($event)" class="btn">Download now!</a>
 </div>
