--- a/src/app/global/hero/hero.component.html
+++ b/src/app/global/hero/hero.component.html
@@ -43,7 +43,7 @@
   <div data-aos="fade-in" data-aos-delay="200" data-aos-duration="3000" *ngIf="home">
     <h1>Branding for a better future</h1>
     
-    <p class="hero__tagline">Because revolutionary technology <span style="display: block">needs revolutionary design&trade;</span></p>
+    <p class="hero__tagline">Because revolutionary technology <span style="display: block">needs revolutionary design</span></p>
 
     <div class="row" data-aos="fade-in" data-aos-delay="600" data-aos-duration="3000">
       <div class="col text-right">
