changed copy on tagline and added border-left

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -5,15 +5,15 @@
 
     <div class="home__tagline-wrapper">
       <p class="home__tagline" data-aos="fade-in" data-aos-duration="1000">
-        <span class="hidden-md-up">
-          We are a <strong>brand strategy and design</strong> studio 
-          <span class="home__tagline-break">that helps innovative <strong>tech startups</strong></span>
-          <span class="home__tagline-break">grow and <strong>stand out in the market</strong>.</span>
+        <span class="hidden-md-up home__tagline-border">
+         <strong>Reinventing Brand ⁠—</strong>
+          <span class="home__tagline-break"><i>beautiful & exceptional design</i></span>
+          <span class="home__tagline-break"><i>for growth-minded tech startups.</i></span>
         </span>
-        <span appParallax [ratio]=".15" [direction]="'horizontal'" style="display: inline-block;" class="hidden-md">
-          We are a <strong>brand strategy and design</strong> studio 
-          <span class="home__tagline-break">that helps innovative <strong>tech startups</strong></span>
-          <span class="home__tagline-break">grow and <strong>stand out in the market</strong>.</span>
+        <span appParallax [ratio]=".15" [direction]="'horizontal'" style="display: inline-block;" class="hidden-md home__tagline-border">
+         <strong>Reinventing Brand ⁠—</strong>
+          <span class="home__tagline-break"><i>beautiful & exceptional design</i></span>
+          <span class="home__tagline-break"><i>for growth-minded tech startups.</i></span>
         </span>
       </p>
     </div>
