changed copy and heading size

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -6,14 +6,15 @@
     <div class="home__tagline-wrapper">
       <p class="home__tagline" data-aos="fade-in" data-aos-duration="1000">
         <span class="hidden-md-up home__tagline-border">
-         <strong>Reinventing Brand ⁠—</strong>
-          <span class="home__tagline-break"><i>beautiful & exceptional design</i></span>
-          <span class="home__tagline-break"><i>for growth-minded tech startups.</i></span>
+          <span class="home__tagline-break"><i>We are a brand strategy and design studio</i></span>
+          <span class="home__tagline-break"><i>that help innovative tech startups</i></span>
+             <span class="home__tagline-break"><i>grow and stand out in the market.</i></span>
         </span>
         <span appParallax [ratio]=".15" [direction]="'horizontal'" style="display: inline-block;" class="hidden-md home__tagline-border">
-         <strong>Reinventing Brand ⁠—</strong>
-          <span class="home__tagline-break"><i>beautiful & exceptional design</i></span>
-          <span class="home__tagline-break"><i>for growth-minded tech startups.</i></span>
+          <span class="home__tagline-break"><i>We are a brand strategy and design studio</i></span>
+          <span class="home__tagline-break"><i>that help innovative tech startups</i></span>
+           <span class="home__tagline-break"><i>grow and stand out in the market.</i></span>
+        
         </span>
       </p>
     </div>
