--- a/src/app/pages/work/work.component.html
+++ b/src/app/pages/work/work.component.html
@@ -1,11 +1,11 @@
 <h2 class="sr-only">Projects</h2>
 <div class="work white-bg">
-  <div class="work__item-image" *ngFor="let workItem of work; index as i;">
-    <a [routerLink]="'/case-study/' + workItem.slug" class="work__link">
-      <img class="work__image" [src]="workItem._embedded['wp:featuredmedia'][0].media_details.sizes.large.source_url"/>
-    </a>
-  </div>
   <div class="container-fluid">
+    <div class="work__item-image" *ngFor="let workItem of work; index as i;">
+      <a [routerLink]="'/case-study/' + workItem.slug" class="work__link">
+        <img class="work__image img-fluid" [src]="workItem.acf.homepage_image.sizes.large" (load)="load($event)" />
+      </a>
+    </div>
     <app-get-in-touch></app-get-in-touch>
   </div>
 </div>
