--- a/src/app/global/hero/hero.component.scss
+++ b/src/app/global/hero/hero.component.scss
@@ -29,7 +29,7 @@
 
       @include md {
         @include font-size($heading-1);
-        margin-bottom: 10px;
+        margin-bottom: $margin-xlarge;
       }
     }
 
