--- a/src/app/pages/what/what.component.scss
+++ b/src/app/pages/what/what.component.scss
@@ -18,6 +18,7 @@
     @include md {
       @include font-size(20);
       margin: $space-xlrg 0;
+      text-align: left;
     }
   }
 
@@ -29,8 +30,13 @@
     margin: 0;
     padding: $space-medium;
     border-radius: 5px;
-    border: 1px solid $color-mine-shaft;
-    text-align: center;
+    text-align: left;
+  }
+
+  &__text {
+    @include md {
+      text-align: left;
+    }
   }
 
   &__fixed-title {
