--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -5,17 +5,16 @@
 
     <div class="home__tagline-wrapper">
       <p class="home__tagline" data-aos="fade-in" data-aos-duration="1000">
-        <span class="hidden-md-up home__tagline-border">
-          <span class="home__tagline-break"><i>We are a brand strategy and design studio</i></span>
-          <span class="home__tagline-break"><i>that help innovative tech startups</i></span>
-             <span class="home__tagline-break"><i>grow and stand out in the market.</i></span>
-        </span>
-        <span appParallax [ratio]=".15" [direction]="'horizontal'" style="display: inline-block;" class="hidden-md home__tagline-border">
-          <span class="home__tagline-break"><i>We are a brand strategy and design studio</i></span>
-          <span class="home__tagline-break"><i>that help innovative tech startups</i></span>
-           <span class="home__tagline-break"><i>grow and stand out in the market.</i></span>
-        
-        </span>
+        <em class="hidden-md-up home__tagline-border">
+          <span class="home__tagline-break">We are a brand strategy and design studio</span>
+          <span class="home__tagline-break">that help innovative tech startups</span>
+          <span class="home__tagline-break">grow and stand out in the market.</span>
+        </em>
+        <em appParallax [ratio]=".15" [direction]="'horizontal'" style="display: inline-block;" class="hidden-md home__tagline-border">
+          <span class="home__tagline-break">We are a brand strategy and design studio</span>
+          <span class="home__tagline-break">that help innovative tech startups</span>
+          <span class="home__tagline-break">grow and stand out in the market.</span>
+        </em>
       </p>
     </div>
   </div>
