task/update-site-design (#85)
* changed heading font to open sans

* removed emojis from nav

* removed console log

* image hover effect added

* added margin to nav menu

* removed tm

* changed copy on tagline and added border-left

* changed copy and heading size

* changed to relative paths and added plugins folder to assets with js plugins

* images made wider bug fixes

* design updates

* fix error

* review

* fix tests

* return call

--- a/src/app/global/header/header.component.scss
+++ b/src/app/global/header/header.component.scss
@@ -89,6 +89,7 @@
   &__menu {
     list-style: none;
     display: none;
+    margin-right: 30px;
 
     @include lg {
       display: block;
@@ -119,10 +120,9 @@
         }
       }
 
-
       @include md {
         margin-right: 0;
-        margin-left: $space-large;
+        margin-left: 30px;
       }
     }
   }
