--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -5,16 +5,16 @@
 
     <div class="home__tagline-wrapper">
       <p class="home__tagline" data-aos="fade-in" data-aos-duration="1000">
-        <span class="hidden-md-up">
-          We are a <strong>brand strategy and design</strong> studio 
-          <span class="home__tagline-break">that helps innovative <strong>tech startups</strong></span>
-          <span class="home__tagline-break">grow and <strong>stand out in the market</strong>.</span>
-        </span>
-        <span appParallax [ratio]=".15" [direction]="'horizontal'" style="display: inline-block;" class="hidden-md">
-          We are a <strong>brand strategy and design</strong> studio 
-          <span class="home__tagline-break">that helps innovative <strong>tech startups</strong></span>
-          <span class="home__tagline-break">grow and <strong>stand out in the market</strong>.</span>
-        </span>
+        <em class="hidden-md-up home__tagline-border">
+          <span class="home__tagline-break">We are a brand strategy and design studio</span>
+          <span class="home__tagline-break">that help innovative tech startups</span>
+          <span class="home__tagline-break">grow and stand out in the market.</span>
+        </em>
+        <em appParallax [ratio]=".15" [direction]="'horizontal'" style="display: inline-block;" class="hidden-md home__tagline-border">
+          <span class="home__tagline-break">We are a brand strategy and design studio</span>
+          <span class="home__tagline-break">that help innovative tech startups</span>
+          <span class="home__tagline-break">grow and stand out in the market.</span>
+        </em>
       </p>
     </div>
   </div>
@@ -29,7 +29,7 @@
         <div class="col-md-8">
           <a 
             class="home__work-item"
-            [ngStyle]="{'background-image': 'url(' + this.work[0]._embedded['wp:featuredmedia'][0].media_details.sizes.large.source_url + ')'}"
+            [ngStyle]="{'background-image': 'url(' + this.work[0].acf.homepage_image.sizes.medium_large + ')'}"
             [routerLink]="'/case-study/' + this.work[0].slug"
             >
             <span class="text">
