--- a/src/app/global/hero/hero.component.html
+++ b/src/app/global/hero/hero.component.html
@@ -41,7 +41,7 @@
   </div>
 
   <div data-aos="fade-in" data-aos-delay="200" data-aos-duration="3000" *ngIf="home">
-    <h1>Reinventing Brand</h1>
+    <h1>Branding for a better future</h1>
     
     <p class="hero__tagline">Beautiful & exceptional design for growth-minded tech startups</p>
 
