--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -26,8 +26,10 @@
   }
 
   &__tagline-border {
-    border-left: 9px solid $color-malibu;
-    padding-left: 20px;
+    @include lg {
+      border-left: 9px solid $color-malibu;
+      padding-left: 20px;
+    }
   }
 
   &__tagline {
