add lots of context

--- a/src/app/global/hero/hero.component.html
+++ b/src/app/global/hero/hero.component.html
@@ -41,9 +41,9 @@
   </div>
 
   <div data-aos="fade-in" data-aos-delay="200" data-aos-duration="3000" *ngIf="home">
-    <h1>Branding for a better future</h1>
+    <div class="h1">Branding for a better future</div>
     
-    <p class="hero__tagline">Beautiful & exceptional design for growth-minded tech startups</p>
+    <p class="hero__tagline">Beautiful & exceptional design for future-thinking tech startups</p>
 
     <div class="row" data-aos="fade-in" data-aos-delay="600" data-aos-duration="3000">
       <div class="col text-right">
