--- a/src/app/global/footer/footer.component.html
+++ b/src/app/global/footer/footer.component.html
@@ -1,4 +1,4 @@
-<footer class="footer" ngClass="{'footer--hide': hide}">
+<footer class="footer" ngClass="{'footer--hide': hide}" (appDeferLoad)="showMyElement=true">
     <div class="container-fluid">
       <blockquote class="text-center">
         <q>You've made it to the bottom!</q>
@@ -88,7 +88,7 @@
         </div>
       </div>
       <span class="footer__giraffe">
-        <img [src]="'assets/images/giraffe.png'" [srcset]="'assets/images/giraffe@2x.png 2x'" alt="">
+        <img [src]="'assets/images/giraffe.png'" [srcset]="'assets/images/giraffe@2x.png 2x'" *ngIf="showMyElement" alt="">
       </span>
     </div>
 </footer>
