--- a/src/app/global/hero/hero.component.scss
+++ b/src/app/global/hero/hero.component.scss
@@ -23,7 +23,7 @@
       min-height: 500px;
     }
 
-    h1 {
+    h1, .h1 {
       @include font-size($heading-1-mobile);
       line-height: 60px;
 
