--- a/src/app/pages/who/who.component.html
+++ b/src/app/pages/who/who.component.html
@@ -1,14 +1,13 @@
 <div class="white-bg who">
+  <h1 class="sr-only">About Jupiter and the Giraffe</h1>
   <section class="container-fluid">
-    <header>
-      <h2>Who is Jupiter and who is the Giraffe?</h2>
-    </header>
+    <div class="h2">Who is Jupiter and who is the Giraffe?</div>
 
     <div [innerHTML]="content.content.rendered" *ngIf="content"></div>
 
     <section class="who__images" *ngIf="team">
       <header>
-        <h3>Our fleet</h3>
+        <h2>Our fleet</h2>
       </header>
 
       <div class="row">
@@ -21,7 +20,7 @@
                      [srcset]="member._embedded['wp:featuredmedia'][0].media_details.sizes.medium.source_url + ' 1x, ' + member._embedded['wp:featuredmedia'][0].source_url + ' 2x'">
               </div>
               <div class="media-body media-bottom">
-                <h4 class="media-heading" itemprop="name">{{member.title.rendered}}</h4>
+                <h3 class="media-heading" itemprop="name">{{member.title.rendered}}</h3>
                 <span itemprop="jobTitle">{{member.acf.title}}</span> <br>
                 <span itemprop="email">{{member.acf.email}}</span>
               </div>
@@ -33,7 +32,7 @@
 
     <section>
       <header>
-        <h3>Our process</h3>
+        <h2>Our process</h2>
       </header>
 
       <div [innerHTML]="content.acf.value" *ngIf="content"></div>
