--- a/src/assets/sass/generic/_fonts.scss
+++ b/src/assets/sass/generic/_fonts.scss
@@ -30,6 +30,26 @@
         url('/assets/fonts/fontawesome-webfont.woff2') format('woff2'),
         url('/assets/fonts/fontawesome-webfont.woff') format('woff'),
         url('/assets/fonts/fontawesome-webfont.svg#fontawesomeregular') format('svg');
+        font-weight: normal;
+        font-style: normal;
+      }
+      
+      
+  @font-face {
+    font-family: 'open_sanslight';
+    src: url('/assets/fonts/opensans-light-webfont.ttf') format('truetype'),
+         url('/assets/fonts/opensans-light-webfont.woff2') format('woff2'),
+         url('/assets/fonts/opensans-light-webfont.woff') format('woff');
   font-weight: normal;
   font-style: normal;
+
+}
+
+@font-face {
+  font-family: 'open_sansbold';
+  src: url('/assets/fonts/opensans-bold-webfont.woff2') format('woff2'),
+       url('/assets/fonts/opensans-bold-webfont.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+
 }
