--- a/src/assets/sass/settings/_fonts.scss
+++ b/src/assets/sass/settings/_fonts.scss
@@ -1,5 +1,5 @@
-$body-font: 'Open Sans', -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
-$title-font: 'Open Sans', Arial, sans-serif;
+$body-font: 'open_sanslight', -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+$title-font: 'open_sansbold', Arial, sans-serif;
 $base-font: 16;
 $base-font-desk: 18;
 $small-font: 14;
